--- a/app/views/noodall/admin/nodes/show.html.erb
+++ b/app/views/noodall/admin/nodes/show.html.erb
@@ -134,6 +134,13 @@
             <span class="input-wrap"><%= f.text_field :browser_title %></span>
           </p>
         </div>
+
+        <div class="version_message_section">
+          <p>
+            <%= f.label :version_message %><br />
+            <span class="input-wrap"><%= f.text_field :version_message -%></span>
+          </p>
+        </div>  
       </div>
     </fieldset>
   </div>
