--- a/public/stylesheets/admin/layout.css
+++ b/public/stylesheets/admin/layout.css
@@ -736,20 +736,17 @@ li.multi-file span.file-title {
 li.multi-file .file-detail img {clear:both;float:left;}
 
 /*Advanced Sections*/
-.published-section {
+.published-section,
+.position-section,
+.permissions-section,
+.version_message_section {
   width: 356px;
   float:left;
 }
 
-.position-section {
-  width: 356px;
-  float:left;
-  margin: 0 0 0 10px;
-}
-
-.permissions-section {
-  width: 356px;
-  float:left;
+.position-section,
+.permissions-section,
+.version_message_section {
   margin: 0 0 0 10px;
 }
 
@@ -769,6 +766,10 @@ li.multi-file .file-detail img {clear:both;float:left;}
 #content form .position-section p {
   min-width: 356px;
   padding: 0 !important;
+}
+
+.version_message_section p {
+  min-width: 356px !important;
 }
 
 
