--- a/demo/views/layouts/application.html.erb
+++ b/demo/views/layouts/application.html.erb
@@ -53,7 +53,7 @@ maximum-scale = 1.0 retains dimensions instead of zooming in if page width < dev
     google.load("swfobject", "2.2");
   </script>
 
-  <%= javascript_include_tag 'rails', 'cufon-yui', 'fancybox', 'carousel.lite', 'application' %>
+  <%= javascript_include_tag 'rails', 'fancybox', 'carousel.lite', 'application' %>
   <%= csrf_meta_tag %>
 
 <!-- so:JavaScripts -->
@@ -117,7 +117,6 @@ maximum-scale = 1.0 retains dimensions instead of zooming in if page width < dev
     </div>
 
 </div>
-<!--[if IE]><script type="text/javascript"> Cufon.now(); </script><![endif]-->
 <!-- Last Updated: <%#= GlobalUpdateTime::Stamp.read %> -->
 
 </body>
