--- a/app/views/noodall/admin/nodes/show.html.erb
+++ b/app/views/noodall/admin/nodes/show.html.erb
@@ -38,10 +38,10 @@
 
   <div class="fixed-form">
     <div id="buttons">
-      <%= f.submit 'Publish', :class => 'publish', :name => 'node[publish]' if can_publish?(@node) %>
-      <%= f.submit 'Draft', :name => "draft", :class => 'draft' %>
-      <%= link_to 'Versions', noodall_admin_node_versions_path(@node), :id => "versions-button" %>
-      <%= f.submit 'Hide', :name => 'node[hide]', :id => 'hide' %>
+      <%= f.submit 'Publish', :title => "Save and put live", :class => 'publish', :id => "publish", :name => 'node[publish]' if can_publish?(@node) %>
+      <%= f.submit 'Draft', :title => "Save this to edit later", :name => "draft", :class => 'draft' %>
+      <%= link_to 'Versions', noodall_admin_node_versions_path(@node), :title => "View document history", :id => "versions-button" %>
+      <%= f.submit 'Hide', :title => "Temporarily hide this page", :name => 'node[hide]', :id => 'hide' %>
       <%= link_to 'Cancel', @node.root? ? noodall_admin_nodes_path : noodall_admin_node_nodes_path(@node.parent), :class => 'cancel'  %>
     </div>
 
@@ -119,7 +119,7 @@
               <%= f.hidden_field :parent, :value => @node.parent_id %>
               <%= hidden_field_tag :parent_types, @node.class.parent_classes.join(','), :disabled => true %>
             </p>
-            
+
             <!-- PAGE URL -->
             <p>
               <span class="tooltip" title="You can leave as default value shown or if you want to create a custom URL for this page do not include a forward slash at the beginning of the URL."> &nbsp; </span>
@@ -140,7 +140,7 @@
             <%= f.label :version_message %><br />
             <span class="input-wrap"><%= f.text_field :version_message -%></span>
           </p>
-        </div>  
+        </div>
       </div>
     </fieldset>
   </div>
