--- a/app/views/noodall/admin/versions/index.html.erb
+++ b/app/views/noodall/admin/versions/index.html.erb
@@ -11,8 +11,8 @@
         <td> Version <%= version.pos  %> </td>
         <td> <%= version.message %> </td>
         <td> <%= l version.date %> </td>
-        <td> <%= link_to "View", noodall_version_path(@node, version) %> </td>
-        <td> <%= link_to "Use", noodall_admin_node_path(@node, :version_number => version.pos) %> </td>
+        <td> <%= link_to "View", noodall_version_path(@node, version), :title => "View this version" %> </td>
+        <td> <%= link_to "Use", noodall_admin_node_path(@node, :version_number => version.pos), :title => "Use this version of content" %> </td>
       </tr>
     <% end %>
   </tbody>
